styles/components/_button.scss
@use "../base/" as *;

.btn {
  padding: 14px 24px;
  border-radius: 57px;
  border: 1.5px solid $primary-color;
  font-weight: $font-medium;
  font-size: $size-medium;
  line-height: 24px;
  cursor: pointer;
  @include flex($direction: row, $align: center, $gap: 8px);
  width: fit-content;
  &-secondary {
    color: $primary-color;
    img {
      padding-left: 20px;
    }
    &:hover {
      background-color: $primary-color;
      color: $white-color;
    }
  }
  &-primary {
    background-color: $primary-color;
    color: $white-color;
    &:hover {
      background-color: $white-color;
      color: $primary-color;
    }
  }
  &-border {
    border-radius: 8px;
  }
  &-2xl {
    padding: 14px 35px;
  }
  &-xl {
    padding: 14px 30px;
  }
  &-sm {
    padding: 12px 28px;
  }
  &-bold {
    font-weight: $font-bold;
  }
  &-font-small {
    font-size: $size-small;
  }
}

